--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
                     <h1>Convert you home into a museum with <strong>Maps & </strong>Dioramas</h1>
                     <p>Maps & Dioramas(MAD) is an innovative augmented reality (AR) app for iOS devices that revolutionizes how users interact with maps and dioramas.
                     <br> Now available on the App Store!</p> <a href="https://apps.apple.com/in/app/maps-dioramas-ar/id6470123108" class="simple-button"><span class="icon flaticon-download7"></span>Download App</a> </div>
+                    <br><a href="https://www.producthunt.com/posts/maps-dioramas-ar?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-maps&#0045;dioramas&#0045;ar" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=425108&theme=light" alt="Maps&#0032;&#0038;&#0032;Dioramas&#0032;AR - Make&#0032;your&#0032;living&#0032;room&#0032;the&#0032;museum&#0032;you&#0032;always&#0032;wanted&#0032;to&#0032;go&#0032;to&#0046; | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a></br>
+                    
                     <!-- END SECTION HOME CONTENT -->
             </div>
         </div>
